# weave-api

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Makefile  README.md  docker-compose.yml  eslint.config.mjs  mypy.ini  package.json  pnpm-lock.yaml  pyproject.toml  sonar-project.properties  tsconfig.json
.cursor/: rules
.github/workflows/: ci.yml
.husky/: pre-push
alembic/: env.py  script.py.mako
app/: config.py  main.py
app/models/: __init__.py  calendar.py  expense.py  family.py  goal.py  insight.py  tax.py  user.py
app/modules/auth/: dependencies.py  router.py
app/modules/family/: repository.py  service.py
app/modules/goals/: schemas.py
app/shared/: encryption.py  result.py
app/shared/db/: base.py  mixins.py  session.py
app/shared/errors/: __init__.py
app/shared/events/: event_types.py  publisher.py
app/shared/jobs/: calendar_sync.py  insight_recalc.py  tax_deadline_seeder.py  weekly_digest.py
app/shared/middleware/: authenticate.py  tenant.py
docs/: ARCHITECTURE_DECISIONS.md  CURSOR_PROMPTS.md  PRODUCT_BRIEF.md  SCALING.md
prisma/: schema.prisma
src/: app.ts  config.test.ts  config.ts
src/modules/auth/: auth.repository.ts  auth.routes.ts  auth.schema.ts  auth.service.ts  auth.test.ts
src/modules/calendar/: calendar.repository.ts  calendar.routes.ts  calendar.schema.ts  calendar.service.ts  calendar.test.ts
src/modules/family/: family.repository.ts  family.routes.ts  family.schema.ts  (+2 more)
tests/: conftest.py
tests/shared/: test_encryption.py  test_errors.py  test_result.py
(+39 files in other folders)
